Fix Accordion Safari display issues

--- a/components/agility-pageModules/accordion/accordion.module.scss
+++ b/components/agility-pageModules/accordion/accordion.module.scss
@@ -57,6 +57,9 @@
         color: $color-white;
         font-size: 1.25rem;
       }
+      div:first-child {
+        flex-grow: 1;
+      }
       @include focus-visible-touch-outlines();
     }
     &[open] {
